cmake_minimum_required(VERSION 3.29)
project(With_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(With_C__
#        Linear_Search.cpp
#        Pattern_Matching.cpp
#        Bubble_Sort.cpp
#        Prefix_Evaluation.cpp
#       Postfix_Evaluation.cpp
#        Quick_Sort.cpp
#        Factorial_Calculation_UsingRecursion.cpp
#        Fibonacci_Sequence_Using_Recursion.cpp
        Tower_of_Hanoi_Using_Recursion.cpp
)
